--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -66,3 +66,16 @@
   color: #7a95c5;
   font-size: 18px;
 }
+
+.home-favorite-toggle{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 35px 0 20px;
+  color: #3761A8;
+  font-size: 16px;
+}
+
+.home-favorite-toggle > p{
+  margin: 5px 0;
+}
