--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -34,6 +34,10 @@
     ></app-card-info>
   </div>
 
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadPokemons($event)" *ngIf="hasMore">
+    <ion-infinite-scroll-content loadingSpinner="crescent" loadingText="Carregando mais pokémons..."/>
+  </ion-infinite-scroll>
+
   <div *ngIf="loading" class="loading-msg">
     <ion-spinner name="crescent"></ion-spinner>
     <p>Buscando Pokémon...</p>
